--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -28,33 +28,31 @@ a:hover {
     text-decoration: underline;
 }
 
-
+/* temp inicio */
+#root {
+    flex-grow: 1;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+/* temp final */
 
 .card {
     box-shadow: var(--shadow-medium);
     padding: .85em;
+    height: 200px;
+    width: 200px;
+    transition: all 1s;
     text-align: center;
     display: inline-block;
+}
+.card:hover {
+    height: 300px;
 }
 .card h4 {
     cursor: pointer;
 }
 .card h4:hover {
     text-decoration: underline;
-}
-
-
-.modal-container {
-    width: 100%;
-    height: 100vh;
-    background-color: rgba(0,0,0,0.12);
-    /* display: flex; */
-    /* justify-content: center; */
-    /* align-items: center; */
-    position: fixed;
-    top: 0;
-    left: 0;
-}
-.modal-content {
-
 }
